# shift-reset

./: .ocamlformat  Makefile  dune-project  shift-reset.opam
interpret/: dune  interpret.ml
lib/: dune  shift_reset.ml
test/: dune  test_shift_reset.ml
