(lang dune 3.20)

(name shift-reset)

(generate_opam_files true)

(source
 (github dariusf/genuine-shift-reset))

(authors "Darius Foo <darius.foo.tw@gmail.com>")

(maintainers "Darius Foo <darius.foo.tw@gmail.com>")

(license LICENSE)

(documentation https://github.com/dariusf/genuine-shift-reset)

(package
 (name shift-reset)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags (delimited control)))
